Fixes footer layout on mobile

--- a/source/sass/blocks/_filters.scss
+++ b/source/sass/blocks/_filters.scss
@@ -24,7 +24,6 @@
 }
 
 .filters__clear {
-  display: inline-block;
   margin-left: auto;
 
   color: var(--font-medium);
