--- a/source/sass/blocks/_footer.scss
+++ b/source/sass/blocks/_footer.scss
@@ -35,5 +35,5 @@
 }
 
 .footer__filters {
-  flex: 1 0 auto;
+  flex-grow: 1;
 }
